tried dif home pages again

--- a/PersonalWebsiteV2/my-site/package.json
+++ b/PersonalWebsiteV2/my-site/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mayasaltzman.github.io/",
+  "homepage": "http://mayasaltzman.github.io/PersonalWebsiteV2",
   "name": "my-site",
   "version": "0.1.0",
   "private": false,
